# InsightFlow

./: .env.example  .gitignore  README.md  bottest.py  cps_dump.html  parse_shopee_html.py  pyproject.toml  scratch.py  scratch_shopee_parse.py  scratch_stealth.py  scratch_stealth_auth.py  shopee_api_data.json  shopee_auto.html  shopee_auto_extracted.json  shopee_crawler.py  shopee_extracted.json  shopee_flash_sale.html  shopee_flash_sale_crawler.py  shopee_state.json  shopee_test.html  stealth_shopee.html  test_cps.py  tgdd.html
apps/: dashboard.py
apps/pages/: 1_Shopee_Flash_Sale.py
chrome_profile/: Local State  SingletonCookie  SingletonLock  SingletonSocket
chrome_profile/Default/: .org.chromium.Chromium.0pyOQr  .org.chromium.Chromium.10VXW3  .org.chromium.Chromium.24WezK  .org.chromium.Chromium.2QjlDm  .org.chromium.Chromium.2TnnTB  .org.chromium.Chromium.2YAkNl  .org.chromium.Chromium.2ZBT8H  .org.chromium.Chromium.4CMmCo  .org.chromium.Chromium.4tlrHu  .org.chromium.Chromium.7NEM85  .org.chromium.Chromium.8RjnHa  .org.chromium.Chromium.KD1cVC  .org.chromium.Chromium.LHhrOM  .org.chromium.Chromium.LyihUz  .org.chromium.Chromium.MbvlXt  .org.chromium.Chromium.RIcHYZ  .org.chromium.Chromium.RScfLd  .org.chromium.Chromium.SUpasl  .org.chromium.Chromium.VAB6ta  .org.chromium.Chromium.Vrk4Hf  .org.chromium.Chromium.XAsgyb  .org.chromium.Chromium.au06Zv  .org.chromium.Chromium.bISw1M  DIPS  (+32 more)
chrome_profile_new/: Local State  SingletonCookie  SingletonLock  SingletonSocket
config/: targets.yaml
scratch/: Untitled-1  check_cellphones_final.py  debug_cellphones.py
(+380 files in other folders)
