[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insightflow"
version = "0.1.0"
description = "Intelligent web scraper, analysis, AI digest, and PDF reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "pandas>=2.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "selectolax>=0.3",
    "reportlab>=4.0",
    "rich>=13.7",
    "typer>=0.12",
    "vaderSentiment>=3.3",
    "pyarrow>=15.0",
    "undetected-chromedriver>=3.5",
    "selenium>=4.0"
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[project.scripts]
insightflow = "insightflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
